[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/ui/splash_2.png" type="Texture" id=1]
[ext_resource path="res://game/ui/shop.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipButton" type="Button" parent="Panel"]
visible = false
margin_left = 898.445
margin_top = 284.221
margin_right = 938.445
margin_bottom = 304.221
text = "skip"

[node name="card1" type="TextureButton" parent="Panel"]
margin_left = 147.0
margin_top = 213.0
margin_right = 319.0
margin_bottom = 365.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="card3" type="TextureButton" parent="Panel"]
margin_left = 415.928
margin_top = 216.054
margin_right = 566.928
margin_bottom = 368.054
__meta__ = {
"_edit_use_anchors_": false
}

[node name="card2" type="TextureButton" parent="Panel"]
margin_left = 696.809
margin_top = 229.407
margin_right = 847.809
margin_bottom = 381.408
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/SkipButton" to="." method="_on_SkipButton_pressed"]
[connection signal="mouse_entered" from="Panel/card1" to="." method="_on_card1_mouse_entered"]
[connection signal="mouse_exited" from="Panel/card1" to="." method="_on_card1_mouse_exited"]
[connection signal="pressed" from="Panel/card1" to="." method="_on_card1_pressed"]
[connection signal="mouse_entered" from="Panel/card3" to="." method="_on_card3_mouse_entered"]
[connection signal="mouse_exited" from="Panel/card3" to="." method="_on_card3_mouse_exited"]
[connection signal="pressed" from="Panel/card3" to="." method="_on_card3_pressed"]
[connection signal="mouse_entered" from="Panel/card2" to="." method="_on_card2_mouse_entered"]
[connection signal="mouse_exited" from="Panel/card2" to="." method="_on_card2_mouse_exited"]
[connection signal="pressed" from="Panel/card2" to="." method="_on_card2_pressed"]
